--- a/video.css
+++ b/video.css
@@ -64,7 +64,7 @@ main{
     width: 100%;
     height: 50vh;
 
-    background-image:linear-gradient(to right,rgba(0,0,0,0), rgba(0,0,0)), url(imagens/paisagem-g.png);
+    background-image:linear-gradient(to right,rgba(0,0,0,0), rgba(0,0,0)), url(imagens/paisagem-p.png);
     background-size: cover;
     background-position: center;
     border-radius: 15px 0px 0px 15px;
@@ -93,7 +93,6 @@ main{
     align-items: center;
     background-color: var(--cor3);
     box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.301);
-
 
 }
 
@@ -184,10 +183,10 @@ footer{
     }
     
     #tv{
-        width: 65%;
+        width: 100%;
     }
     #textotv{
-        width:35%;
+        display: flex;
     }
 
     .texto{
