--- a/video.css
+++ b/video.css
@@ -64,7 +64,7 @@ main{
     width: 100%;
     height: 50vh;
 
-    background-image:linear-gradient(to right,rgba(0,0,0,0), rgba(0,0,0)), url(imagens/paisagem-p.png);
+    background-image:linear-gradient(to right,rgba(0,0,0,0), rgba(0,0,0)), url(imagens/paisagem-m.png);
     background-size: cover;
     background-position: center;
     border-radius: 15px 0px 0px 15px;
