--- a/video.css
+++ b/video.css
@@ -59,7 +59,6 @@ main{
 
 .slide1{
     display: flex;
-
     margin: 10px;
     box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.301);
     border-radius: 15px;
@@ -69,7 +68,7 @@ main{
 #tv{
     width: 100%;
     height: 50vh;
-
+    border: 0px;
     background-image:linear-gradient(to right,rgba(0,0,0,0), rgba(0,0,0)), url(imagens/paisagem-m.png);
     background-size: cover;
     background-position: center;
