--- a/video.css
+++ b/video.css
@@ -35,7 +35,7 @@ header img{
 header nav > a{
     text-decoration: none;
     color: var(--cor4);
-    font-size: 1.5em;
+    font-size: 2.5vw;
     margin: 10px;
     padding: 10px;
     background-color: var(--cor1);
@@ -53,42 +53,43 @@ main{
     max-width: 1920px;
     min-width: 320px;
     padding-top: 20px;
+    margin: 20px;
 
 }
 
 
 .slide1{
     display: flex;
-    margin: 10px;
+    margin: 20px auto;
     box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.301);
     border-radius: 15px;
+    max-width: 1920px;
+    min-height: 300px;
 
     
 }
 #tv{
     width: 100%;
-    height: 50vh;
-    border: 0px;
     background-image:linear-gradient(to right,rgba(0,0,0,0), rgba(0,0,0)), url(imagens/paisagem-m.png);
     background-size: cover;
-    background-position: center;
+    background-position: center ;
     border-radius: 15px 0px 0px 15px;
 }
 
 #textotv{
-    width: 100%;
-    height: 50vh;
+    display:flex;
     border-radius: 0px 15px 15px 0px;
     color: white;
     background-color: black;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.3vw;
     
 }
 
 .slide1 p{
-    max-width: 1920px;
-    min-width: 320px;
     margin: auto;
-    font-size: 2em;
+    font-size: 3vw;
 }
 
 .video{
@@ -104,7 +105,7 @@ main{
 .video p{
     text-align: center;
     color: white;
-    font-size: 1.5em;
+    font-size: 2.5vw;
 }
 
 .video>div{
@@ -139,11 +140,9 @@ main{
 }
 
 .texto{
-    max-width: 1920px;
-    min-width: 320px;
     columns: 2;
     padding: 10px;
-    font-size: 2em;
+    font-size: 3vw;
     text-indent: 30px;
     text-align: justify;
     background-color:var(--cor4);
@@ -187,7 +186,6 @@ footer{
     header{
         display: flex;
         justify-content: center;
-        font-size: 9px;
 
     }
     header nav{
