--- a/video.css
+++ b/video.css
@@ -5,7 +5,6 @@
     padding: 0px;
     
     font-family: Arial, Helvetica, sans-serif;
-    text-indent: 30px;
 }
 
 :root{
@@ -27,7 +26,7 @@ header{
     box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.301);
 }
 header img{
-    width: 100px;
+    width: 10vw;
     margin: 10px;
     box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.301);
 }
@@ -71,7 +70,7 @@ main{
 }
 #tv{
     width: 100%;
-    background-image:linear-gradient(to right,rgba(0,0,0,0), rgba(0,0,0)), url(imagens/paisagem-m.png);
+    background-image:linear-gradient(to right,rgba(0,0,0,0), rgba(0,0,0)), url(imagens/televisaopq.png);
     background-size: cover;
     background-position: center ;
     border-radius: 15px 0px 0px 15px;
@@ -96,7 +95,8 @@ main{
 .video{
     display: flex;
     flex-wrap: wrap;
-    margin: 0 auto;
+    margin: 3em auto;
+    justify-content: center;
     align-items: center;
     background-color: var(--cor3);
     box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.301);
@@ -123,9 +123,8 @@ main{
 #foto1{
     width: 100%;
     height: 50vh;
-    background-image:linear-gradient(to bottom, transparent, rgba(0,0,0)), url(imagens/paisagem-m.png);
+    background: black url(imagens/televisaopq.png) center no-repeat fixed;
     background-size: cover;
-    background-position: center;
     margin-top: 20px;
     border-radius: 15px 15px 0px 0px;
     box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.301);
@@ -141,6 +140,7 @@ main{
 }
 
 .texto{
+    margin-top: 2em;
     columns: 2;
     padding: 10px;
     font-size: 3vw;
@@ -154,24 +154,53 @@ main{
 .itens{
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 
 }
+.itens div{
+    box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.445);
+    border-radius: 20px;
+    margin: 20px;
+}
 
-.itens > div{
+.itens div > img{
+    width: 15vw;
     flex:1 1 50px;
     margin: 10px;
-
 }
 
+.itens div:hover{
+    filter: drop-shadow(10px 0px 10px rgba(0, 0, 0, 0.295));
+    box-shadow: 2px 2px 10px var(--cor);
+    transition: 0.7s;
+}
 .legenda{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     text-align: center;
     text-decoration: none;
+    color: black;
+    font-size: 2vw;
+}
+.slide4{
+    width: 100%;
+    padding: 300px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    background: linear-gradient(to left, var(--cor4), var(--cor1),var(--cor2),var(--cor3), var(--cor4));
+    background-size: cover;
+    background-attachment: fixed;
+    background-size: 500% 100%;
+    animation: degrade-animado 7s infinite alternate;
+}
+.slide4 p{
+    width: 60vw;
 }
 
-.legenda > a{
-    text-decoration: none;
-    color: black;
-}
 
 footer{
     padding: 30px;
@@ -182,6 +211,17 @@ footer{
     background-color: crimson;
     color: white;
 }
+
+@keyframes degrade-animado {
+    0%{
+        background-position-x:0%;
+    }
+    
+    100%{
+        background-position-x: 100%;
+    }
+}
+
 
 @media(max-width:600px){
     header{
